Update ImageEditor and Slider components

--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.0",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.13.0",
-    "three": "^0.150.0",
+    "three": "^0.169.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/fabric": "^5.3.9",
+    "@types/lodash": "^4.17.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/three": "^0.150.2",
+    "@types/react-easy-crop": "^1.16.0",
+    "@types/three": "^0.169.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
