--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-node_modules
-node_modules
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Firebase config
+src/firebase-config.js
+
+# Build output
+/dist
+/build
+
+# Dependency directories
+/node_modules
+
+# Logs
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Vite
+.vite
