--- a/package.json
+++ b/package.json
@@ -14,28 +14,30 @@
     "@react-three/drei": "^9.0.0",
     "@react-three/fiber": "^8.0.0",
     "babylonjs": "^7.31.0",
+    "firebase": "^11.0.1",
+    "idb": "^8.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.453.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-easy-crop": "^5.0.0",
-    "react-router-dom": "^6.27.0",
+    "lucide-react": "^0.144.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.4",
+    "react-router-dom": "^6.10.0",
     "recharts": "^2.13.0",
     "three": "^0.169.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.12",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/lodash": "^4.14.194",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-easy-crop": "^1.16.0",
     "@types/three": "^0.169.0",
     "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
