--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Environment variables
 .env
 .env.local
-.env.development
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Firebase config
 src/firebase-config.js
