--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/drei": "^9.0.0",
     "@react-three/fiber": "^8.0.0",
     "babylonjs": "^7.31.0",
-    "firebase": "^11.0.1",
+    "firebase": "^9.0.0",
     "idb": "^8.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.144.0",
@@ -24,7 +24,9 @@
     "react-router-dom": "^6.10.0",
     "recharts": "^2.13.0",
     "three": "^0.169.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "@firebase/firestore-types": "^2.5.0",
+    "@firebase/storage-types": "^0.6.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
