Update Firebase configuration and add debugging component14

--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@firebase/firestore-types": "^2.5.0",
-    "@firebase/storage-types": "^0.6.0",
     "@google/model-viewer": "^4.0.0",
     "@react-three/drei": "^9.0.0",
     "@react-three/fiber": "^8.0.0",
     "babylonjs": "^7.31.0",
     "firebase": "^9.0.0",
-    "firebase-admin": "^12.7.0",
     "idb": "^8.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.144.0",
@@ -27,7 +24,9 @@
     "react-router-dom": "^6.10.0",
     "recharts": "^2.13.0",
     "three": "^0.169.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "@firebase/firestore-types": "^2.5.0",
+    "@firebase/storage-types": "^0.6.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
