--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.5",
+    "react-image-picker-editor": "^1.3.5",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.13.0",
     "three": "^0.169.0",
